[gd_scene load_steps=4 format=3 uid="uid://p3wdybx1k8m2"]

[ext_resource type="PackedScene" uid="uid://bdxfyoi1dy16n" path="res://scenes/menu_manager.tscn" id="1_piagc"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_q3vcu"]
[ext_resource type="PackedScene" uid="uid://cw1jt1ikeyxad" path="res://scenes/combat.tscn" id="2_pixsr"]

[node name="Main" type="Node"]
script = ExtResource("1_q3vcu")

[node name="MenuManager" parent="." instance=ExtResource("1_piagc")]

[node name="Combat" parent="." instance=ExtResource("2_pixsr")]

[connection signal="menu_closed" from="MenuManager" to="." method="_on_menu_manager_menu_closed"]
[connection signal="menu_opened" from="MenuManager" to="." method="_on_menu_manager_menu_opened"]
[connection signal="play_pressed" from="MenuManager" to="." method="_on_menu_manager_play_pressed"]
